# dbt-python-imports

./: .gitignore  README.md  hatch.toml  pyproject.toml
.github/workflows/: lint.yml  publish.yml  test.yml
src/dbt_python_imports/: __init__.py
tests/: profiles.yml  test_plugin.py
