[project]
name = "dbt-python-imports"
description = "dbt plugin to add `modules.import` method to Jinja context to import arbitrary Python modules"
readme = "README.md"
authors = [
    { name = "Tim Vergenz", email = "vergenzt@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [
    "dbt-core>=1.6",
]
dynamic = ["version"]

[project.urls]
source = "https://github.com/vergenzt/dbt-python-imports"

[dependency-groups]
dev = [
    "hatch>=1.14.2",
    "pytest>=8.3.5",
    "dbt-postgres",
    "tinypg>=0.3.0",
    "ruff>=0.15.4",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"
